--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
         <form>
           <label for="m-nome">Nome</label>
           <input id="m-nome" type="text" required />
-  
+
           <label for="m-sobrenome">Sobrenome</label>
           <input id="m-sobrenome" type="text" required />
 
-          <label for="m-rg">RG</label>
+          <label for="m-rg">Rg</label>
           <input id="m-rg" type="number" required />
-  
-          <label for="m-cpf">CPF</label>
+
+          <label for="m-cpf">Cpf</label>
           <input id="m-cpf" type="number" required />
 
-          <label for="m-rg">Data de Nascimento</label>
-          <input id="m-datanascimento" type="datanascimento" required />
+          <label for="m-data_nascimento">Data de Nascimento</label>
+          <input id="m-data_nascimento" type="datanascimento" required />
           <button id="btnSalvar">Salvar</button>
         </form>
       </div>
